--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,15 @@
 {
-    "wrerites":[
-        {"source":"/(.*)","destination":"/"}
-    ]
+   "version":2,
+   "builds":[
+ {
+    "src":"./app.js",
+    "use":"@vercel/node"
+ }
+   ],
+   "routes":[
+    {
+        "src":"/(.*)",
+        "dest":"/"
+    }
+   ]
 }
