--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,12 @@
 {
-   "version":2,
-   "builds":[
- {
-    "src":"./app.js",
-    "use":"@vercel/node"
- }
-   ],
    "routes":[
     {
-        "src":"/(.*)",
-        "dest":"./"
+        "src":"/",
+        "dest":"/"
+    },
+    {
+        "src":"/index",
+        "dest":"/"
     }
    ]
 }
