--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,5 @@
 {
-   "routes":[
-    {
-        "src":"/",
-        "dest":"/"
-    },
-    {
-        "src":"/index",
-        "dest":"/"
-    }
-   ]
+    "rewrites":[
+        {"source":"/(.*)", "destination":"/"}
+    ]
 }
