--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,4 @@
+
 {
-    "rewrites":[
-        {"source":"/(.*)", "destination":"/"}
-    ]
-<<<<<<< HEAD
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
-=======
-}
->>>>>>> 6e6c6b99128bb7239c1393b2dbaf0907fee2985b
